# rivik_assets

./: Cargo.toml
.cargo/: config.toml
examples/: obj.rs
src/: lib.rs  mgr.rs  path.rs
src/formats/: mesh.rs
src/formats/img/: general.rs
src/formats/mesh/: obj.rs
src/formats/misc/: bin.rs  txt.rs
