[package]
name = "rivik_assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"
mint = { version = "0.5.9", features = ["serde"] }
phf = "0.11"
once_cell = "1.16.0"
uriparse = { version = "0.6.4", features = ["serde"] }
log = "0.4.17"
image = "0.24.5"
reerror = { version = "0.1", registry = "rapdorian" }

[dev-dependencies]
env_logger = "0.10.0"
